[gd_scene load_steps=64 format=3 uid="uid://c7lg5vya6bj3p"]

[ext_resource type="Script" path="res://Scripts/Player/player.gd" id="1_0d5b3"]
[ext_resource type="Texture2D" uid="uid://cbbi4luuc4cvb" path="res://Assets/creatures/Minifantasy_Creatures_Assets/Monsters/Slime/Green_Slime/Minifantasy_CreaturesSlimeGreenIdle.png" id="2_bg7ai"]
[ext_resource type="AudioStream" uid="uid://bw4om6jsl4r4n" path="res://Assets/sounds/cast.wav" id="2_xsy06"]
[ext_resource type="Texture2D" uid="uid://chfglvio37j7c" path="res://Assets/creatures/Minifantasy_Creatures_Assets/Monsters/Slime/Green_Slime/Minifantasy_CreaturesSlimeGreenAnimations.png" id="3_1oeod"]
[ext_resource type="AudioStream" uid="uid://dyl7e7qujij44" path="res://Assets/sounds/cast 2.wav" id="3_xhpqt"]
[ext_resource type="Script" path="res://Scripts/Player/Attack_range.gd" id="4_m4h3l"]
[ext_resource type="AudioStream" uid="uid://b61x81a6jslok" path="res://Assets/sounds/sword atk.wav" id="4_q57jm"]
[ext_resource type="Script" path="res://Scripts/Player/FacingRightDirectionCollisionShape.gd" id="5_4aw1v"]
[ext_resource type="PackedScene" uid="uid://dm2vvrqeg77yd" path="res://scenes/UI/FigthUI.tscn" id="6_m7oi4"]
[ext_resource type="AudioStream" uid="uid://b58j7runs6c0j" path="res://Assets/sounds/slime bounce.wav" id="6_pea76"]

[sub_resource type="AtlasTexture" id="AtlasTexture_do0vd"]
atlas = ExtResource("3_1oeod")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pqne2"]
atlas = ExtResource("3_1oeod")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ukh8"]
atlas = ExtResource("3_1oeod")
region = Rect2(64, 288, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_grmx3"]
atlas = ExtResource("3_1oeod")
region = Rect2(96, 288, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qk1ny"]
atlas = ExtResource("3_1oeod")
region = Rect2(0, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_twju0"]
atlas = ExtResource("3_1oeod")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l3y8n"]
atlas = ExtResource("3_1oeod")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_73ltk"]
atlas = ExtResource("3_1oeod")
region = Rect2(64, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_igx61"]
atlas = ExtResource("3_1oeod")
region = Rect2(96, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ce25f"]
atlas = ExtResource("3_1oeod")
region = Rect2(128, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qpqc7"]
atlas = ExtResource("3_1oeod")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h3484"]
atlas = ExtResource("3_1oeod")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_omcpk"]
atlas = ExtResource("3_1oeod")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dng6g"]
atlas = ExtResource("3_1oeod")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g1sy7"]
atlas = ExtResource("3_1oeod")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gtbcp"]
atlas = ExtResource("3_1oeod")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w4svw"]
atlas = ExtResource("3_1oeod")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q6kqb"]
atlas = ExtResource("3_1oeod")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xvy2q"]
atlas = ExtResource("3_1oeod")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xc27e"]
atlas = ExtResource("2_bg7ai")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_se1e3"]
atlas = ExtResource("2_bg7ai")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4gmn5"]
atlas = ExtResource("2_bg7ai")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qc75u"]
atlas = ExtResource("2_bg7ai")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uesgo"]
atlas = ExtResource("2_bg7ai")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jieoi"]
atlas = ExtResource("2_bg7ai")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qt647"]
atlas = ExtResource("2_bg7ai")
region = Rect2(192, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0xh35"]
atlas = ExtResource("2_bg7ai")
region = Rect2(224, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_560mf"]
atlas = ExtResource("2_bg7ai")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pcgel"]
atlas = ExtResource("2_bg7ai")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jb8jt"]
atlas = ExtResource("2_bg7ai")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lgkbu"]
atlas = ExtResource("2_bg7ai")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i84lr"]
atlas = ExtResource("2_bg7ai")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6cyht"]
atlas = ExtResource("2_bg7ai")
region = Rect2(160, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ur5eu"]
atlas = ExtResource("2_bg7ai")
region = Rect2(192, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1jctd"]
atlas = ExtResource("2_bg7ai")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g2ug8"]
atlas = ExtResource("3_1oeod")
region = Rect2(128, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q1vml"]
atlas = ExtResource("3_1oeod")
region = Rect2(160, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uqb6c"]
atlas = ExtResource("3_1oeod")
region = Rect2(96, 352, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8aeer"]
atlas = ExtResource("3_1oeod")
region = Rect2(0, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mxr01"]
atlas = ExtResource("3_1oeod")
region = Rect2(32, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ijd3e"]
atlas = ExtResource("3_1oeod")
region = Rect2(96, 288, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vg8ja"]
atlas = ExtResource("3_1oeod")
region = Rect2(0, 288, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_aekss"]
atlas = ExtResource("3_1oeod")
region = Rect2(32, 288, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ndr7s"]
atlas = ExtResource("3_1oeod")
region = Rect2(96, 288, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tiqyo"]
atlas = ExtResource("3_1oeod")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pdl2n"]
atlas = ExtResource("3_1oeod")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3qico"]
atlas = ExtResource("3_1oeod")
region = Rect2(0, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3dah7"]
atlas = ExtResource("3_1oeod")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i67ch"]
atlas = ExtResource("3_1oeod")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ug1px"]
atlas = ExtResource("3_1oeod")
region = Rect2(0, 224, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_qna8r"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_do0vd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pqne2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ukh8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_grmx3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qk1ny")
}],
"loop": false,
"name": &"attack",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_twju0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l3y8n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_73ltk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_igx61")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ce25f")
}],
"loop": false,
"name": &"attack_back",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qpqc7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h3484")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_omcpk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dng6g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g1sy7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gtbcp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w4svw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q6kqb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xvy2q")
}],
"loop": false,
"name": &"die",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xc27e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_se1e3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4gmn5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qc75u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uesgo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jieoi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qt647")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0xh35")
}],
"loop": true,
"name": &"idle-back",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_560mf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pcgel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jb8jt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lgkbu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i84lr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6cyht")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ur5eu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jctd")
}],
"loop": true,
"name": &"idle-front",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2ug8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q1vml")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uqb6c")
}],
"loop": true,
"name": &"run-back",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8aeer")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mxr01")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ijd3e")
}],
"loop": true,
"name": &"run-front",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vg8ja")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aekss")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ndr7s")
}],
"loop": true,
"name": &"run-horizontal",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tiqyo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pdl2n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3qico")
}],
"loop": false,
"name": &"took_damage",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3dah7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i67ch")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ug1px")
}],
"loop": false,
"name": &"took_damage_back",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mch4g"]
size = Vector2(42, 22)

[sub_resource type="CircleShape2D" id="CircleShape2D_8xvqv"]
radius = 15.0333

[node name="Player" type="CharacterBody2D"]
collision_layer = 256
script = ExtResource("1_0d5b3")
speed = 200.0
cast_sound = ExtResource("2_xsy06")
cast_sound_2 = ExtResource("3_xhpqt")
took_damage = ExtResource("4_q57jm")
_health = 100
_max_health = 100

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(4.54747e-13, -1.19209e-07)
scale = Vector2(4.029, 4)
sprite_frames = SubResource("SpriteFrames_qna8r")
animation = &"die"
autoplay = "idle-front"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2.5)
shape = SubResource("RectangleShape2D_mch4g")

[node name="Attack_range" type="Area2D" parent="." node_paths=PackedStringArray("player", "facing_shape")]
collision_layer = 8388608
collision_mask = 3
script = ExtResource("4_m4h3l")
player = NodePath("..")
facing_shape = NodePath("CollisionShape2D")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack_range"]
position = Vector2(11, 3)
shape = SubResource("CircleShape2D_8xvqv")
script = ExtResource("5_4aw1v")
facing_left_position = Vector2(-18, 3)
facing_right_position = Vector2(18, 3)
facing_up_position = Vector2(0, -18)
facing_down_position = Vector2(0, 18)

[node name="CPUParticles2D" type="CPUParticles2D" parent="Attack_range/CollisionShape2D"]
emitting = false
amount = 200
lifetime = 0.4
one_shot = true
emission_shape = 1
emission_sphere_radius = 23.04
spread = 180.0
gravity = Vector2(0, 200)
initial_velocity_min = 60.0
initial_velocity_max = 100.0
color = Color(0.140625, 0.644531, 0.402344, 1)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Attack_range"]
stream = ExtResource("6_pea76")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2.5, 2.5)
position_smoothing_speed = 3.0

[node name="Control" type="Control" parent="Camera2D"]
layout_mode = 3
anchors_preset = 0
offset_left = -231.0
offset_top = -130.0
offset_right = 230.0
offset_bottom = 129.0

[node name="FigthUI" parent="Camera2D/Control" instance=ExtResource("6_m7oi4")]
layout_mode = 1

[connection signal="hp_changed" from="." to="Camera2D/Control/FigthUI" method="_on_hp_changed"]
[connection signal="item_changed" from="." to="Camera2D/Control/FigthUI" method="_on_player_item_changed"]
[connection signal="item_used" from="." to="Camera2D/Control/FigthUI" method="_on_player_item_used"]
[connection signal="body_shape_entered" from="Attack_range" to="Attack_range" method="_on_body_shape_entered"]
